--- a/documentation/index.html
+++ b/documentation/index.html
@@ -72,7 +72,7 @@
     <!-- <script type="module" src="./index.js"></script> --->
     <!--For Production Use the commented script -->
     <!-- <script data-main="scripts/app" src="https://myxpresspay.com:6002/xpressPay.min.js"></script>  -->
-    <script data-main="scripts/app" src=""></script>
+    <script data-main="scripts/app" src="http://wayapayplugin-001-site1.itempurl.com/wirepay.min.js"></script>
 
     <script>
         $(document).ready(function () {
