--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <body>
 
-    <h3>Merchant APP(WirePayTest)</h3>
+    <h3>Merchant APP(WayaPayTest)</h3>
 
     <div>
         <p style="text-align: center;"><span id="error" style="color: red; font-weight: 600;"> </span>
